--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: AnimatedTexture Maker
+description: A tool that aims to simplify the process of making AnimatedTextures
