--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
-title: AnimatedTexture Maker for Godot
 subtitle: 1234
-description: A tool that aims to simplify the process of making AnimatedTextures 321
+description: A tool that aims to simplify the process of making AnimatedTextures
