--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-subtitle: 1234
+title: AnimatedTexture Maker for Godot
 description: A tool that aims to simplify the process of making AnimatedTextures
